--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="theme-color" content="#5d5cda" />
-    <meta property="og:title" content="Just Nyde - Personal Website" />
+    <meta property="og:title" content="Space - Personal Website" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Hello! I'm Nyde. I am a 16y/o Turkish student. Also I'm a full-stack web developer."/>
-    <meta property="og:site_name" content="Just Nyde - An experienced web developer.">
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://nyde.live/image/banner.png">
+    <meta property="og:description" content="Hi, I’m @spacethelight I'm currently learning I am currently living in İstanbul, Turkey."/>
+    <meta property="og:site_name" content="Space - An experienced web developer.">
 
 
     <!-- ANIMATE -->
